Bettering everything as a whole - simplifications and logic changes
LMCROSSITXSADEPLOY-3563