@@ -1,6 +1,6 @@
 package org.cloudfoundry.multiapps.controller.client.facade.rest;
 
-import java.time.Duration;
+import java.text.MessageFormat;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -9,6 +9,10 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import org.cloudfoundry.multiapps.controller.Constants;
+import org.cloudfoundry.multiapps.controller.Messages;
 import org.cloudfoundry.multiapps.controller.client.facade.CloudOperationException;
 import org.cloudfoundry.multiapps.controller.client.facade.domain.CloudRoute;
 import org.cloudfoundry.multiapps.controller.client.facade.domain.CloudSpace;
@@ -17,42 +21,18 @@ import org.cloudfoundry.multiapps.controller.client.facade.rest.resources.V3Doma
 import org.cloudfoundry.multiapps.controller.client.facade.rest.resources.V3ListResponse;
 import org.cloudfoundry.multiapps.controller.client.facade.rest.resources.V3Route;
 import org.cloudfoundry.multiapps.controller.client.facade.rest.resources.V3RouteMapper;
-
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonProperty;
-
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 
-/**
- * CF v3 <em>routes</em> operations of the cf-java-client replacement. Reproduces the HTTP shape, async handling and domain mapping of the
- * OSS {@code CloudControllerRestClientImpl} route methods:
- * <ul>
- * <li>{@code addRoute(host, domainName, path)} &rarr; resolve the domain, then {@code POST /v3/routes} (idempotent: reuse an existing
- * route if one already matches);</li>
- * <li>{@code deleteRoute(host, domainName, path)} &rarr; resolve the route in the target space and {@code DELETE /v3/routes/{guid}}
- * (async job), 404 if not found;</li>
- * <li>{@code deleteOrphanedRoutes()} &rarr; {@code DELETE /v3/spaces/{guid}/routes?unmapped=true} (async job);</li>
- * <li>{@code getRoutes(domainName)} &rarr; {@code GET /v3/routes?domain_guids=…&space_guids=…} (paginated);</li>
- * <li>{@code getApplicationRoutes(appGuid)} &rarr; {@code GET /v3/apps/{guid}/routes} (paginated);</li>
- * <li>{@code updateApplicationRoutes(appName, routes)} &rarr; diff current vs requested destinations, then insert/remove destinations.</li>
- * </ul>
- * All listings are scoped to the target space exactly where the OSS impl scopes them.
- */
 public class RoutesV3Operations {
 
     private static final ParameterizedTypeReference<V3ListResponse<V3Route>> ROUTE_PAGE = new ParameterizedTypeReference<>() {
     };
     private static final ParameterizedTypeReference<V3ListResponse<V3Domain>> DOMAIN_PAGE = new ParameterizedTypeReference<>() {
     };
-
-    // CF v3 caps per_page at 5000; matches the other V3 operations.
-    private static final int DEFAULT_PAGE_SIZE = 5000;
-    // Mirrors the OSS DELETE_JOB_TIMEOUT.
-    private static final Duration DELETE_JOB_TIMEOUT = Duration.ofMinutes(5);
 
     private final CloudControllerV3Client cc;
     private final CloudSpace target;
@@ -70,21 +50,24 @@ public class RoutesV3Operations {
 
     public void deleteRoute(String host, String domainName, String path) {
         assertSpaceProvided("delete route for domain");
+
         UUID routeGuid = getRouteGuid(getRequiredDomainGuid(domainName), host, path);
         if (routeGuid == null) {
-            throw new CloudOperationException(HttpStatus.NOT_FOUND, "Not Found",
-                                              "Host " + host + " not found for domain " + domainName + ".");
+            throw new CloudOperationException(HttpStatus.NOT_FOUND, Messages.NOT_FOUND,
+                                              MessageFormat.format(Messages.HOST_0_NOT_FOUND_FOR_DOMAIN_1, host, domainName));
         }
+
         doDeleteRoute(routeGuid);
     }
 
     public void deleteOrphanedRoutes() {
         ResponseEntity<Void> response = cc.getRestClient()
                                           .delete()
-                                          .uri("/v3/spaces/{guid}/routes?unmapped=true", getTargetSpaceGuid())
+                                          .uri(CloudControllerV3Endpoints.SPACE_UNMAPPED_ROUTES, getTargetSpaceGuid())
                                           .retrieve()
                                           .toEntity(Void.class);
-        cc.followAsyncJob(response, DELETE_JOB_TIMEOUT);
+
+        cc.followAsyncJob(response, Constants.DELETE_JOB_TIMEOUT);
     }
 
     public List<CloudRoute> getRoutes(String domainName) {
@@ -94,56 +77,70 @@ public class RoutesV3Operations {
     }
 
     public List<CloudRoute> getApplicationRoutes(UUID applicationGuid) {
-        return listRoutes("/v3/apps/" + applicationGuid + "/routes?per_page=" + DEFAULT_PAGE_SIZE).stream()
-                                                                                                  .map(route -> V3RouteMapper.toCloudRoute(
-                                                                                                      route, applicationGuid))
-                                                                                                  .toList();
+        return listRoutes(CloudControllerV3Endpoints.APPS + "/" + applicationGuid + "/routes" + CloudControllerV3Endpoints.QUERY_PER_PAGE
+                              + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE).stream()
+                                                                             .map(route -> V3RouteMapper.toCloudRoute(
+                                                                                 route, applicationGuid))
+                                                                             .toList();
     }
 
     public void updateApplicationRoutes(String applicationName, Set<CloudRoute> updatedRoutes) {
         UUID applicationGuid = getRequiredApplicationGuid(applicationName);
+
         List<CloudRoute> appRoutes = listRoutes(
-            "/v3/apps/" + applicationGuid + "/routes?per_page=" + DEFAULT_PAGE_SIZE).stream()
-                                                                                   .map(V3RouteMapper::toCloudRoute)
-                                                                                   .toList();
+            CloudControllerV3Endpoints.APPS + "/" + applicationGuid + "/routes" + CloudControllerV3Endpoints.QUERY_PER_PAGE
+                + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE).stream()
+                                                               .map(V3RouteMapper::toCloudRoute)
+                                                               .toList();
+
         Set<CloudRoute> outdatedRoutes = getOutdatedRoutes(applicationGuid, appRoutes, updatedRoutes);
         Set<CloudRoute> newRoutes = getNewRoutes(applicationGuid, appRoutes, updatedRoutes);
+
         removeRoutes(outdatedRoutes, applicationGuid);
         addRoutes(newRoutes, applicationGuid);
     }
 
-    // --- route listing helpers -------------------------------------------------------------------
-
     private List<CloudRoute> findRoutesByDomainGuid(UUID domainGuid) {
-        StringBuilder query = new StringBuilder("/v3/routes?per_page=" + DEFAULT_PAGE_SIZE);
-        query.append("&domain_guids=")
+        StringBuilder query = new StringBuilder(
+            CloudControllerV3Endpoints.ROUTES + CloudControllerV3Endpoints.QUERY_PER_PAGE + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE);
+
+        query.append(CloudControllerV3Endpoints.AMPERSAND_DOMAIN_GUIDS)
              .append(domainGuid);
-        query.append("&space_guids=")
+
+        query.append(CloudControllerV3Endpoints.AMPERSAND_SPACE_GUIDS)
              .append(getTargetSpaceGuid());
+
         return listRoutes(query.toString()).stream()
                                            .map(V3RouteMapper::toCloudRoute)
                                            .toList();
     }
 
     private UUID getRouteGuid(UUID domainGuid, String host, String path) {
-        StringBuilder query = new StringBuilder("/v3/routes?per_page=" + DEFAULT_PAGE_SIZE);
-        query.append("&domain_guids=")
+        StringBuilder query = new StringBuilder(
+            CloudControllerV3Endpoints.ROUTES + CloudControllerV3Endpoints.QUERY_PER_PAGE + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE);
+
+        query.append(CloudControllerV3Endpoints.AMPERSAND_DOMAIN_GUIDS)
              .append(domainGuid);
-        query.append("&space_guids=")
+
+        query.append(CloudControllerV3Endpoints.AMPERSAND_SPACE_GUIDS)
              .append(getTargetSpaceGuid());
+
         if (host != null) {
-            query.append("&hosts=")
+            query.append(CloudControllerV3Endpoints.AMPERSAND_HOSTS)
                  .append(host);
         }
+
         if (path != null) {
-            query.append("&paths=")
+            query.append(CloudControllerV3Endpoints.AMPERSAND_PATHS)
                  .append(path);
         }
+
         List<V3Route> routes = listRoutes(query.toString());
         if (CollectionUtils.isEmpty(routes)) {
             return null;
         }
-        return UUID.fromString(routes.get(0)
+
+        return UUID.fromString(routes.getFirst()
                                      .guid());
     }
 
@@ -151,15 +148,16 @@ public class RoutesV3Operations {
         return cc.list(query, ROUTE_PAGE);
     }
 
-    // --- add / bind / remove ---------------------------------------------------------------------
-
     private void addRoutes(Set<CloudRoute> routes, UUID applicationGuid) {
         Map<String, UUID> domains = getDomainsFromRoutes(routes);
+
         for (CloudRoute route : routes) {
             validateDomainForRoute(route, domains);
+
             UUID domainGuid = domains.get(route.getDomain()
                                                .getName());
             UUID routeGuid = getOrAddRoute(domainGuid, route.getHost(), route.getPath());
+
             bindRoute(routeGuid, applicationGuid, route.getRequestedProtocol());
         }
     }
@@ -177,9 +175,11 @@ public class RoutesV3Operations {
 
     private UUID getOrAddRoute(UUID domainGuid, String host, String path) {
         UUID routeGuid = getRouteGuid(domainGuid, host, path);
+
         if (routeGuid == null) {
             routeGuid = doAddRoute(domainGuid, host, path);
         }
+
         return routeGuid;
     }
 
@@ -187,28 +187,30 @@ public class RoutesV3Operations {
         assertSpaceProvided("add route");
         V3Route created = cc.getRestClient()
                             .post()
-                            .uri("/v3/routes")
+                            .uri(CloudControllerV3Endpoints.ROUTES)
                             .body(Map.of("host", host == null ? "" : host, "path", path == null ? "" : path, "relationships",
                                          Map.of("domain", toOneRelationship(domainGuid), "space",
                                                 toOneRelationship(getTargetSpaceGuid()))))
                             .retrieve()
                             .body(V3Route.class);
+
         return UUID.fromString(created.guid());
     }
 
     private void doDeleteRoute(UUID guid) {
         ResponseEntity<Void> response = cc.getRestClient()
                                           .delete()
-                                          .uri("/v3/routes/{guid}", guid)
+                                          .uri(CloudControllerV3Endpoints.ROUTE_BY_GUID, guid)
                                           .retrieve()
                                           .toEntity(Void.class);
-        cc.followAsyncJob(response, DELETE_JOB_TIMEOUT);
+
+        cc.followAsyncJob(response, Constants.DELETE_JOB_TIMEOUT);
     }
 
     private void bindRoute(UUID routeGuid, UUID applicationGuid, String protocol) {
         cc.getRestClient()
           .post()
-          .uri("/v3/routes/{guid}/destinations", routeGuid)
+          .uri(CloudControllerV3Endpoints.ROUTE_DESTINATIONS, routeGuid)
           .body(Map.of("destinations", List.of(createDestination(applicationGuid, protocol))))
           .retrieve()
           .toBodilessEntity();
@@ -217,7 +219,7 @@ public class RoutesV3Operations {
     private void unbindRoute(UUID routeGuid, UUID destinationGuid) {
         cc.getRestClient()
           .delete()
-          .uri("/v3/routes/{routeGuid}/destinations/{destinationGuid}", routeGuid, destinationGuid)
+          .uri(CloudControllerV3Endpoints.ROUTE_DESTINATION_BY_GUID, routeGuid, destinationGuid)
           .retrieve()
           .toBodilessEntity();
     }
@@ -226,14 +228,13 @@ public class RoutesV3Operations {
         if (protocol == null) {
             return Map.of("app", Map.of("guid", applicationGuid.toString()));
         }
+
         return Map.of("app", Map.of("guid", applicationGuid.toString()), "protocol", protocol);
     }
 
     private static Map<String, Object> toOneRelationship(UUID guid) {
         return Map.of("data", Map.of("guid", guid.toString()));
     }
-
-    // --- diffing (mirror of the OSS impl) --------------------------------------------------------
 
     private Set<CloudRoute> getOutdatedRoutes(UUID applicationGuid, List<CloudRoute> currentRoutes, Set<CloudRoute> updatedRoutes) {
         return currentRoutes.stream()
@@ -243,9 +244,11 @@ public class RoutesV3Operations {
 
     private boolean isRouteOutdated(UUID applicationGuid, CloudRoute currentRoute, Set<CloudRoute> updatedRoutes) {
         Optional<CloudRoute> updatedRoute = findRoute(currentRoute.getUrl(), updatedRoutes);
+
         if (updatedRoute.isEmpty()) {
             return true;
         }
+
         return isProtocolChanged(applicationGuid, currentRoute, updatedRoute.get());
     }
 
@@ -257,9 +260,11 @@ public class RoutesV3Operations {
 
     private boolean isRouteUpdated(UUID applicationGuid, CloudRoute updatedRoute, List<CloudRoute> currentRoutes) {
         Optional<CloudRoute> currentRoute = findRoute(updatedRoute.getUrl(), currentRoutes);
+
         if (currentRoute.isEmpty()) {
             return true;
         }
+
         return isProtocolChanged(applicationGuid, currentRoute.get(), updatedRoute);
     }
 
@@ -273,6 +278,7 @@ public class RoutesV3Operations {
         if (updatedRoute.getRequestedProtocol() == null) {
             return false;
         }
+
         return currentRoute.getDestinations()
                            .stream()
                            .filter(routeDestination -> Objects.equals(routeDestination.getApplicationGuid(), applicationGuid))
@@ -283,28 +289,35 @@ public class RoutesV3Operations {
     private void validateDomainForRoute(CloudRoute route, Map<String, UUID> existingDomains) {
         String domain = route.getDomain()
                              .getName();
-        if (!StringUtils.hasLength(domain) || !existingDomains.containsKey(domain)) {
-            throw new CloudOperationException(HttpStatus.NOT_FOUND, HttpStatus.NOT_FOUND.getReasonPhrase(),
-                                              "Domain '" + domain + "' not found for URI " + route.getUrl());
-        }
-    }
 
-    // --- domain resolution (minimal inline lookups; the Domains group owns the full wire model) --
+        if (!StringUtils.hasLength(domain) || !existingDomains.containsKey(domain)) {
+            throw new CloudOperationException(HttpStatus.NOT_FOUND, Messages.NOT_FOUND,
+                                              MessageFormat.format(Messages.DOMAIN_0_NOT_FOUND_FOR_URI_1, domain, route.getUrl()));
+        }
+
+    }
 
     private UUID getRequiredDomainGuid(String name) {
         UUID guid = findDomainGuidByName(name);
+
         if (guid == null) {
-            throw new CloudOperationException(HttpStatus.NOT_FOUND, "Not Found", "Domain " + name + " not found.");
+            throw new CloudOperationException(HttpStatus.NOT_FOUND, Messages.NOT_FOUND,
+                                              MessageFormat.format(Messages.DOMAIN_0_NOT_FOUND, name));
         }
+
         return guid;
     }
 
     private UUID findDomainGuidByName(String name) {
-        List<V3Domain> domains = cc.list("/v3/domains?names=" + name + "&per_page=" + DEFAULT_PAGE_SIZE, DOMAIN_PAGE);
+        List<V3Domain> domains = cc.list(CloudControllerV3Endpoints.DOMAINS + CloudControllerV3Endpoints.QUERY_NAMES + name
+                                             + CloudControllerV3Endpoints.AMPERSAND_PER_PAGE + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE,
+                                         DOMAIN_PAGE);
+
         if (CollectionUtils.isEmpty(domains)) {
             return null;
         }
-        return UUID.fromString(domains.get(0)
+
+        return UUID.fromString(domains.getFirst()
                                       .guid());
     }
 
@@ -314,31 +327,39 @@ public class RoutesV3Operations {
                                                            .getName())
                                         .filter(StringUtils::hasLength)
                                         .collect(Collectors.toSet());
+
         if (domainNames.isEmpty()) {
             return Map.of();
         }
+
         String names = String.join(",", domainNames);
-        return cc.list("/v3/domains?names=" + names + "&per_page=" + DEFAULT_PAGE_SIZE, DOMAIN_PAGE)
+        return cc.list(CloudControllerV3Endpoints.DOMAINS + CloudControllerV3Endpoints.QUERY_NAMES + names
+                           + CloudControllerV3Endpoints.AMPERSAND_PER_PAGE + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE, DOMAIN_PAGE)
                  .stream()
                  .collect(Collectors.toMap(V3Domain::name, domain -> UUID.fromString(domain.guid())));
     }
 
-    // --- application resolution ------------------------------------------------------------------
-
     private UUID getRequiredApplicationGuid(String applicationName) {
-        StringBuilder query = new StringBuilder("/v3/apps?per_page=" + DEFAULT_PAGE_SIZE);
-        query.append("&names=")
+        StringBuilder query = new StringBuilder(
+            CloudControllerV3Endpoints.APPS + CloudControllerV3Endpoints.QUERY_PER_PAGE + CloudControllerV3Endpoints.DEFAULT_PAGE_SIZE);
+
+        query.append(CloudControllerV3Endpoints.AMPERSAND_NAMES)
              .append(applicationName);
+
         if (target != null && target.getGuid() != null) {
-            query.append("&space_guids=")
+            query.append(CloudControllerV3Endpoints.AMPERSAND_SPACE_GUIDS)
                  .append(target.getGuid());
         }
+
         List<V3AppRef> apps = cc.list(query.toString(), new ParameterizedTypeReference<V3ListResponse<V3AppRef>>() {
         });
+
         if (CollectionUtils.isEmpty(apps)) {
-            throw new CloudOperationException(HttpStatus.NOT_FOUND, "Not Found", "Application " + applicationName + " not found.");
+            throw new CloudOperationException(HttpStatus.NOT_FOUND, Messages.NOT_FOUND,
+                                              MessageFormat.format(Messages.APPLICATION_0_NOT_FOUND, applicationName));
         }
-        return UUID.fromString(apps.get(0)
+
+        return UUID.fromString(apps.getFirst()
                                    .guid());
     }
 
@@ -348,13 +369,11 @@ public class RoutesV3Operations {
 
     private void assertSpaceProvided(String operation) {
         if (target == null) {
-            throw new IllegalArgumentException("Unable to " + operation + " without specifying organization and space to use.");
+            throw new IllegalArgumentException(
+                MessageFormat.format(Messages.UNABLE_TO_0_WITHOUT_SPECIFYING_ORGANIZATION_AND_SPACE_TO_USE, operation));
         }
     }
 
-    /**
-     * Minimal wire-model of a CF v3 application resource — only the {@code guid} needed to resolve an application by name.
-     */
     @JsonIgnoreProperties(ignoreUnknown = true)
     private record V3AppRef(@JsonProperty("guid") String guid) {
     }
